# scraping_bases

./: README.md  pyproject.toml
src/: scraper.py
