[tool.poetry]
name = "scraping-bases"
version = "0.1.0"
description = ""
authors = ["Vicrrs <enricofermi2019@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
